--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sticky Note</title>
+    <link rel="stylesheet" href="./src/main.css" />
+    <script src="./src/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <textarea class="note">Some Sample Text</textarea>
+      <textarea class="note">Some Sample Text</textarea>
+      <textarea class="note">Some Sample Text</textarea>
+      <textarea class="note">Some Sample Text</textarea>
+      <textarea class="note">Some Sample Text</textarea>
+      <button class="add-note" type="button">+</button>
+    </div>
+  </body>
 </html>
+
+<!-- 10 + -->
