--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   </head>
   <body>
     <div id="app">
+      <!-- <textarea class="note">Some Sample Text</textarea>
       <textarea class="note">Some Sample Text</textarea>
       <textarea class="note">Some Sample Text</textarea>
       <textarea class="note">Some Sample Text</textarea>
-      <textarea class="note">Some Sample Text</textarea>
-      <textarea class="note">Some Sample Text</textarea>
+      <textarea class="note">Some Sample Text</textarea> -->
       <button class="add-note" type="button">+</button>
     </div>
   </body>
 </html>
-
-<!-- 10 + -->
